1.3
 - Update libcmark-gfm to 0.28.0.gfm.8
 - Hide symbols from dll on supported platforms

1.2
 - Update upstream libcmark (github/cmark@14874d3)
 - Add R_init_commonmark to please CMD check

1.1
 - Update upstream libcmark (github/cmark@57ca6e2)

1.0
 - Switch to Github fork of cmark library (master@0e197aa)
 - Add bindings for enabling extensions
 - Switch to roxygen2 markdown format for manual pages

0.9
 - Update libcmark to 0.26.1

0.8
 - Update libcmark to 0.25.2

0.7
 - Update libcmark to 0.24.1

0.6
 - Update libcmark to 0.23

0.5
 - Update libcmark to 0.22
 - Added markdown_latex() function