@@ -5,6 +5,7 @@ export(markdown_commonmark)
 export(markdown_html)
 export(markdown_latex)
 export(markdown_man)
+export(markdown_text)
 export(markdown_xml)
 useDynLib(commonmark,R_list_extensions)
 useDynLib(commonmark,R_render_markdown)
