@@ -1,5 +1,6 @@
 1.3
  - Update libcmark-gfm to 0.28.0.gfm.8
+ - Add new output markdown_text()
  - Hide symbols from dll on supported platforms
 
 1.2
